examples/good/03-assignment.tx
fun main(): Void {
  var a: Int = 1;
  a = 2;
  printInt(a);
  a++;
  printInt(a);
  a--;
  printInt(a);

  var b: Bool = true;
  b = false;
  printBool(b); 

  var c: String = "tomato";
  c = "ketchup";
  printString(c);

  return;
}
