examples/bad/03-assignment.tx
fun main(): Void {
  var a: Int = 11;
  a = ;

  var b: Bool = True;
  b False;

  return;
}
